Sources/CZigLayout/include/omni_layout.h

typedef enum {
    OMNI_CENTER_NEVER = 0,
    OMNI_CENTER_ALWAYS = 1,
    OMNI_CENTER_ON_OVERFLOW = 2
} OmniCenterMode;
enum {
    OMNI_VIEWPORT_GESTURE_HISTORY_CAP = 64
};
typedef enum {
    OMNI_NIRI_ORIENTATION_HORIZONTAL = 0,
    OMNI_NIRI_ORIENTATION_VERTICAL = 1
} OmniNiriOrientation;
typedef enum {
    OMNI_NIRI_SIZING_NORMAL = 0,
    OMNI_NIRI_SIZING_FULLSCREEN = 1
} OmniNiriSizingMode;
typedef enum {
    OMNI_NIRI_HIDE_NONE = 0,
    OMNI_NIRI_HIDE_LEFT = 1,
    OMNI_NIRI_HIDE_RIGHT = 2
} OmniNiriHideSide;
typedef enum {
    OMNI_NIRI_RESIZE_EDGE_TOP = 0b0001,
    OMNI_NIRI_RESIZE_EDGE_BOTTOM = 0b0010,
    OMNI_NIRI_RESIZE_EDGE_LEFT = 0b0100,
    OMNI_NIRI_RESIZE_EDGE_RIGHT = 0b1000
} OmniNiriResizeEdge;
typedef enum {
    OMNI_NIRI_INSERT_BEFORE = 0,
    OMNI_NIRI_INSERT_AFTER = 1,
    OMNI_NIRI_INSERT_SWAP = 2
} OmniNiriInsertPosition;
enum {
    OMNI_OK = 0,
    OMNI_ERR_INVALID_ARGS = -1,
    OMNI_ERR_OUT_OF_RANGE = -2
};
typedef struct {
    uint8_t bytes[16];
} OmniUuid128;
typedef enum {
    OMNI_NIRI_DIRECTION_LEFT = 0,
    OMNI_NIRI_DIRECTION_RIGHT = 1,
    OMNI_NIRI_DIRECTION_UP = 2,
    OMNI_NIRI_DIRECTION_DOWN = 3
} OmniNiriDirection;
typedef enum {
    OMNI_NIRI_NAV_OP_MOVE_BY_COLUMNS = 0,
    OMNI_NIRI_NAV_OP_MOVE_VERTICAL = 1,
    OMNI_NIRI_NAV_OP_FOCUS_TARGET = 2,
    OMNI_NIRI_NAV_OP_FOCUS_DOWN_OR_LEFT = 3,
    OMNI_NIRI_NAV_OP_FOCUS_UP_OR_RIGHT = 4,
    OMNI_NIRI_NAV_OP_FOCUS_COLUMN_FIRST = 5,
    OMNI_NIRI_NAV_OP_FOCUS_COLUMN_LAST = 6,
    OMNI_NIRI_NAV_OP_FOCUS_COLUMN_INDEX = 7,
    OMNI_NIRI_NAV_OP_FOCUS_WINDOW_INDEX = 8,
    OMNI_NIRI_NAV_OP_FOCUS_WINDOW_TOP = 9,
    OMNI_NIRI_NAV_OP_FOCUS_WINDOW_BOTTOM = 10
} OmniNiriNavigationOp;
typedef enum {
    OMNI_NIRI_MUTATION_OP_MOVE_WINDOW_VERTICAL = 0,
    OMNI_NIRI_MUTATION_OP_SWAP_WINDOW_VERTICAL = 1,
    OMNI_NIRI_MUTATION_OP_MOVE_WINDOW_HORIZONTAL = 2,
    OMNI_NIRI_MUTATION_OP_SWAP_WINDOW_HORIZONTAL = 3,
    OMNI_NIRI_MUTATION_OP_SWAP_WINDOWS_BY_MOVE = 4,
    OMNI_NIRI_MUTATION_OP_INSERT_WINDOW_BY_MOVE = 5,
    OMNI_NIRI_MUTATION_OP_MOVE_WINDOW_TO_COLUMN = 6,
    OMNI_NIRI_MUTATION_OP_CREATE_COLUMN_AND_MOVE = 7,
    OMNI_NIRI_MUTATION_OP_INSERT_WINDOW_IN_NEW_COLUMN = 8,
    OMNI_NIRI_MUTATION_OP_MOVE_COLUMN = 9,
    OMNI_NIRI_MUTATION_OP_CONSUME_WINDOW = 10,
    OMNI_NIRI_MUTATION_OP_EXPEL_WINDOW = 11,
    OMNI_NIRI_MUTATION_OP_CLEANUP_EMPTY_COLUMN = 12,
    OMNI_NIRI_MUTATION_OP_NORMALIZE_COLUMN_SIZES = 13,
    OMNI_NIRI_MUTATION_OP_NORMALIZE_WINDOW_SIZES = 14,
    OMNI_NIRI_MUTATION_OP_BALANCE_SIZES = 15,
    OMNI_NIRI_MUTATION_OP_ADD_WINDOW = 16,
    OMNI_NIRI_MUTATION_OP_REMOVE_WINDOW = 17,
    OMNI_NIRI_MUTATION_OP_VALIDATE_SELECTION = 18,
    OMNI_NIRI_MUTATION_OP_FALLBACK_SELECTION_ON_REMOVAL = 19
} OmniNiriMutationOp;
typedef enum {
    OMNI_NIRI_MUTATION_EDIT_SET_ACTIVE_TILE = 0,
    OMNI_NIRI_MUTATION_EDIT_SWAP_WINDOWS = 1,
    OMNI_NIRI_MUTATION_EDIT_MOVE_WINDOW_TO_COLUMN_INDEX = 2,
    OMNI_NIRI_MUTATION_EDIT_SWAP_COLUMN_WIDTH_STATE = 3,
    OMNI_NIRI_MUTATION_EDIT_SWAP_WINDOW_SIZE_HEIGHT = 4,
    OMNI_NIRI_MUTATION_EDIT_RESET_WINDOW_SIZE_HEIGHT = 5,
    OMNI_NIRI_MUTATION_EDIT_REMOVE_COLUMN_IF_EMPTY = 6,
    OMNI_NIRI_MUTATION_EDIT_REFRESH_TABBED_VISIBILITY = 7,
    OMNI_NIRI_MUTATION_EDIT_DELEGATE_MOVE_COLUMN = 8,
    OMNI_NIRI_MUTATION_EDIT_CREATE_COLUMN_ADJACENT_AND_MOVE_WINDOW = 9,
    OMNI_NIRI_MUTATION_EDIT_INSERT_NEW_COLUMN_AT_INDEX_AND_MOVE_WINDOW = 10,
    OMNI_NIRI_MUTATION_EDIT_SWAP_COLUMNS = 11,
    OMNI_NIRI_MUTATION_EDIT_NORMALIZE_COLUMNS_BY_FACTOR = 12,
    OMNI_NIRI_MUTATION_EDIT_NORMALIZE_COLUMN_WINDOWS_BY_FACTOR = 13,
    OMNI_NIRI_MUTATION_EDIT_BALANCE_COLUMNS = 14,
    OMNI_NIRI_MUTATION_EDIT_INSERT_INCOMING_WINDOW_INTO_COLUMN = 15,
    OMNI_NIRI_MUTATION_EDIT_INSERT_INCOMING_WINDOW_IN_NEW_COLUMN = 16,
    OMNI_NIRI_MUTATION_EDIT_REMOVE_WINDOW_BY_INDEX = 17,
    OMNI_NIRI_MUTATION_EDIT_RESET_ALL_COLUMN_CACHED_WIDTHS = 18
} OmniNiriMutationEditKind;
typedef enum {
    OMNI_NIRI_MUTATION_NODE_NONE = 0,
    OMNI_NIRI_MUTATION_NODE_WINDOW = 1,
    OMNI_NIRI_MUTATION_NODE_COLUMN = 2
} OmniNiriMutationNodeKind;
enum {
    OMNI_NIRI_MUTATION_MAX_EDITS = 32
};
enum {
    OMNI_NIRI_RUNTIME_HINT_MAX_COLUMNS = 2
};
typedef enum {
    OMNI_NIRI_WORKSPACE_OP_MOVE_WINDOW_TO_WORKSPACE = 0,
    OMNI_NIRI_WORKSPACE_OP_MOVE_COLUMN_TO_WORKSPACE = 1
} OmniNiriWorkspaceOp;
typedef enum {
    OMNI_NIRI_WORKSPACE_EDIT_SET_SOURCE_SELECTION_WINDOW = 0,
    OMNI_NIRI_WORKSPACE_EDIT_SET_SOURCE_SELECTION_NONE = 1,
    OMNI_NIRI_WORKSPACE_EDIT_REUSE_TARGET_EMPTY_COLUMN = 2,
    OMNI_NIRI_WORKSPACE_EDIT_CREATE_TARGET_COLUMN_APPEND = 3,
    OMNI_NIRI_WORKSPACE_EDIT_PRUNE_TARGET_EMPTY_COLUMNS_IF_NO_WINDOWS = 4,
    OMNI_NIRI_WORKSPACE_EDIT_REMOVE_SOURCE_COLUMN_IF_EMPTY = 5,
    OMNI_NIRI_WORKSPACE_EDIT_ENSURE_SOURCE_PLACEHOLDER_IF_NO_COLUMNS = 6,
    OMNI_NIRI_WORKSPACE_EDIT_SET_TARGET_SELECTION_MOVED_WINDOW = 7,
    OMNI_NIRI_WORKSPACE_EDIT_SET_TARGET_SELECTION_MOVED_COLUMN_FIRST_WINDOW = 8
} OmniNiriWorkspaceEditKind;
enum {
    OMNI_NIRI_WORKSPACE_MAX_EDITS = 16
};
typedef enum {
    OMNI_DWINDLE_NODE_SPLIT = 0,
    OMNI_DWINDLE_NODE_LEAF = 1
} OmniDwindleNodeKind;
typedef enum {
    OMNI_DWINDLE_ORIENTATION_HORIZONTAL = 0,
    OMNI_DWINDLE_ORIENTATION_VERTICAL = 1
} OmniDwindleOrientation;
typedef enum {
    OMNI_DWINDLE_DIRECTION_LEFT = 0,
    OMNI_DWINDLE_DIRECTION_RIGHT = 1,
    OMNI_DWINDLE_DIRECTION_UP = 2,
    OMNI_DWINDLE_DIRECTION_DOWN = 3
} OmniDwindleDirection;
typedef enum {
    OMNI_DWINDLE_OP_ADD_WINDOW = 0,
    OMNI_DWINDLE_OP_REMOVE_WINDOW = 1,
    OMNI_DWINDLE_OP_SYNC_WINDOWS = 2,
    OMNI_DWINDLE_OP_MOVE_FOCUS = 3,
    OMNI_DWINDLE_OP_SWAP_WINDOWS = 4,
    OMNI_DWINDLE_OP_TOGGLE_FULLSCREEN = 5,
    OMNI_DWINDLE_OP_TOGGLE_ORIENTATION = 6,
    OMNI_DWINDLE_OP_RESIZE_SELECTED = 7,
    OMNI_DWINDLE_OP_BALANCE_SIZES = 8,
    OMNI_DWINDLE_OP_CYCLE_SPLIT_RATIO = 9,
    OMNI_DWINDLE_OP_MOVE_SELECTION_TO_ROOT = 10,
    OMNI_DWINDLE_OP_SWAP_SPLIT = 11,
    OMNI_DWINDLE_OP_SET_PRESELECTION = 12,
    OMNI_DWINDLE_OP_CLEAR_PRESELECTION = 13,
    OMNI_DWINDLE_OP_VALIDATE_SELECTION = 14
} OmniDwindleOp;
enum {
    /// Equivalent to (MAX_WINDOWS * 2) - 1 where MAX_WINDOWS is 512 in Zig ABI.
    OMNI_DWINDLE_MAX_NODES = 1023
};
typedef struct {
    OmniUuid128 window_id;
} OmniDwindleAddWindowPayload;
typedef struct {
    OmniUuid128 window_id;
} OmniDwindleRemoveWindowPayload;
typedef struct {
    const OmniUuid128 *window_ids;
    size_t window_count;
} OmniDwindleSyncWindowsPayload;
typedef struct {
    uint8_t direction;
} OmniDwindleMoveFocusPayload;
typedef struct {
    uint8_t direction;
} OmniDwindleSwapWindowsPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleToggleFullscreenPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleToggleOrientationPayload;
typedef struct {
    double delta;
    uint8_t direction;
} OmniDwindleResizeSelectedPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleBalanceSizesPayload;
typedef struct {
    uint8_t forward;
} OmniDwindleCycleSplitRatioPayload;
typedef struct {
    uint8_t stable;
} OmniDwindleMoveSelectionToRootPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleSwapSplitPayload;
typedef struct {
    uint8_t direction;
} OmniDwindleSetPreselectionPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleClearPreselectionPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleValidateSelectionPayload;
typedef union {
    OmniDwindleAddWindowPayload add_window;
    OmniDwindleRemoveWindowPayload remove_window;
    OmniDwindleSyncWindowsPayload sync_windows;
    OmniDwindleMoveFocusPayload move_focus;
    OmniDwindleSwapWindowsPayload swap_windows;
    OmniDwindleToggleFullscreenPayload toggle_fullscreen;
    OmniDwindleToggleOrientationPayload toggle_orientation;
    OmniDwindleResizeSelectedPayload resize_selected;
    OmniDwindleBalanceSizesPayload balance_sizes;
    OmniDwindleCycleSplitRatioPayload cycle_split_ratio;
    OmniDwindleMoveSelectionToRootPayload move_selection_to_root;
    OmniDwindleSwapSplitPayload swap_split;
    OmniDwindleSetPreselectionPayload set_preselection;
    OmniDwindleClearPreselectionPayload clear_preselection;
    OmniDwindleValidateSelectionPayload validate_selection;
} OmniDwindleOpPayload;
typedef struct {
    uint8_t op;
    OmniDwindleOpPayload payload;
} OmniDwindleOpRequest;
typedef struct {
    uint8_t applied;
    uint8_t has_selected_window_id;
    OmniUuid128 selected_window_id;
    uint8_t has_focused_window_id;
    OmniUuid128 focused_window_id;
    uint8_t has_preselection;
    uint8_t preselection_direction;
    size_t removed_window_count;
} OmniDwindleOpResult;