zig/omni/abi_types.zig


pub const OmniDwindleClearPreselectionPayload = extern struct {
    unused: u8,
};

pub const OmniDwindleValidateSelectionPayload = extern struct {
    unused: u8,
};

pub const OmniDwindleOpPayload = extern union {
    add_window: OmniDwindleAddWindowPayload,
    remove_window: OmniDwindleRemoveWindowPayload,
    sync_windows: OmniDwindleSyncWindowsPayload,
    move_focus: OmniDwindleMoveFocusPayload,
    swap_windows: OmniDwindleSwapWindowsPayload,
    toggle_fullscreen: OmniDwindleToggleFullscreenPayload,
    toggle_orientation: OmniDwindleToggleOrientationPayload,
    resize_selected: OmniDwindleResizeSelectedPayload,
    balance_sizes: OmniDwindleBalanceSizesPayload,
    cycle_split_ratio: OmniDwindleCycleSplitRatioPayload,
    move_selection_to_root: OmniDwindleMoveSelectionToRootPayload,
    swap_split: OmniDwindleSwapSplitPayload,
    set_preselection: OmniDwindleSetPreselectionPayload,
    clear_preselection: OmniDwindleClearPreselectionPayload,
    validate_selection: OmniDwindleValidateSelectionPayload,
};

pub const OmniDwindleOpRequest = extern struct {
    op: u8,
    payload: OmniDwindleOpPayload,
};

pub const OmniDwindleOpResult = extern struct {
    applied: u8,
    has_selected_window_id: u8,
    selected_window_id: OmniUuid128,
    has_focused_window_id: u8,
    focused_window_id: OmniUuid128,
    has_preselection: u8,
    preselection_direction: u8,
    removed_window_count: usize,
};

pub const MAX_WINDOWS: usize = 512;

pub const OMNI_OK: i32 = 0;
pub const OMNI_ERR_INVALID_ARGS: i32 = -1;
pub const OMNI_ERR_OUT_OF_RANGE: i32 = -2;

pub const OMNI_CENTER_NEVER: u8 = 0;
pub const OMNI_CENTER_ALWAYS: u8 = 1;
pub const OMNI_CENTER_ON_OVERFLOW: u8 = 2;

pub const OMNI_VIEWPORT_GESTURE_HISTORY_CAP: usize = 64;

pub const OMNI_NIRI_ORIENTATION_HORIZONTAL: u8 = 0;
pub const OMNI_NIRI_ORIENTATION_VERTICAL: u8 = 1;

pub const OMNI_NIRI_SIZING_NORMAL: u8 = 0;
pub const OMNI_NIRI_SIZING_FULLSCREEN: u8 = 1;

pub const OMNI_NIRI_HIDE_NONE: u8 = 0;
pub const OMNI_NIRI_HIDE_LEFT: u8 = 1;
pub const OMNI_NIRI_HIDE_RIGHT: u8 = 2;

pub const OMNI_NIRI_RESIZE_EDGE_TOP: u8 = 0b0001;
pub const OMNI_NIRI_RESIZE_EDGE_BOTTOM: u8 = 0b0010;
pub const OMNI_NIRI_RESIZE_EDGE_LEFT: u8 = 0b0100;
pub const OMNI_NIRI_RESIZE_EDGE_RIGHT: u8 = 0b1000;

pub const OMNI_NIRI_INSERT_BEFORE: u8 = 0;
pub const OMNI_NIRI_INSERT_AFTER: u8 = 1;
pub const OMNI_NIRI_INSERT_SWAP: u8 = 2;

pub const OMNI_NIRI_DIRECTION_LEFT: u8 = 0;
pub const OMNI_NIRI_DIRECTION_RIGHT: u8 = 1;
pub const OMNI_NIRI_DIRECTION_UP: u8 = 2;
pub const OMNI_NIRI_DIRECTION_DOWN: u8 = 3;

pub const OMNI_NIRI_NAV_OP_MOVE_BY_COLUMNS: u8 = 0;
pub const OMNI_NIRI_NAV_OP_MOVE_VERTICAL: u8 = 1;
pub const OMNI_NIRI_NAV_OP_FOCUS_TARGET: u8 = 2;
pub const OMNI_NIRI_NAV_OP_FOCUS_DOWN_OR_LEFT: u8 = 3;
pub const OMNI_NIRI_NAV_OP_FOCUS_UP_OR_RIGHT: u8 = 4;
pub const OMNI_NIRI_NAV_OP_FOCUS_COLUMN_FIRST: u8 = 5;
pub const OMNI_NIRI_NAV_OP_FOCUS_COLUMN_LAST: u8 = 6;
pub const OMNI_NIRI_NAV_OP_FOCUS_COLUMN_INDEX: u8 = 7;
pub const OMNI_NIRI_NAV_OP_FOCUS_WINDOW_INDEX: u8 = 8;
pub const OMNI_NIRI_NAV_OP_FOCUS_WINDOW_TOP: u8 = 9;
pub const OMNI_NIRI_NAV_OP_FOCUS_WINDOW_BOTTOM: u8 = 10;

pub const OMNI_NIRI_MUTATION_OP_MOVE_WINDOW_VERTICAL: u8 = 0;
pub const OMNI_NIRI_MUTATION_OP_SWAP_WINDOW_VERTICAL: u8 = 1;
pub const OMNI_NIRI_MUTATION_OP_MOVE_WINDOW_HORIZONTAL: u8 = 2;
pub const OMNI_NIRI_MUTATION_OP_SWAP_WINDOW_HORIZONTAL: u8 = 3;
pub const OMNI_NIRI_MUTATION_OP_SWAP_WINDOWS_BY_MOVE: u8 = 4;
pub const OMNI_NIRI_MUTATION_OP_INSERT_WINDOW_BY_MOVE: u8 = 5;
pub const OMNI_NIRI_MUTATION_OP_MOVE_WINDOW_TO_COLUMN: u8 = 6;
pub const OMNI_NIRI_MUTATION_OP_CREATE_COLUMN_AND_MOVE: u8 = 7;
pub const OMNI_NIRI_MUTATION_OP_INSERT_WINDOW_IN_NEW_COLUMN: u8 = 8;
pub const OMNI_NIRI_MUTATION_OP_MOVE_COLUMN: u8 = 9;
pub const OMNI_NIRI_MUTATION_OP_CONSUME_WINDOW: u8 = 10;
pub const OMNI_NIRI_MUTATION_OP_EXPEL_WINDOW: u8 = 11;
pub const OMNI_NIRI_MUTATION_OP_CLEANUP_EMPTY_COLUMN: u8 = 12;
pub const OMNI_NIRI_MUTATION_OP_NORMALIZE_COLUMN_SIZES: u8 = 13;
pub const OMNI_NIRI_MUTATION_OP_NORMALIZE_WINDOW_SIZES: u8 = 14;
pub const OMNI_NIRI_MUTATION_OP_BALANCE_SIZES: u8 = 15;
pub const OMNI_NIRI_MUTATION_OP_ADD_WINDOW: u8 = 16;
pub const OMNI_NIRI_MUTATION_OP_REMOVE_WINDOW: u8 = 17;
pub const OMNI_NIRI_MUTATION_OP_VALIDATE_SELECTION: u8 = 18;
pub const OMNI_NIRI_MUTATION_OP_FALLBACK_SELECTION_ON_REMOVAL: u8 = 19;

pub const OMNI_NIRI_MUTATION_NODE_NONE: u8 = 0;
pub const OMNI_NIRI_MUTATION_NODE_WINDOW: u8 = 1;
pub const OMNI_NIRI_MUTATION_NODE_COLUMN: u8 = 2;

pub const OMNI_NIRI_MUTATION_EDIT_SET_ACTIVE_TILE: u8 = 0;
pub const OMNI_NIRI_MUTATION_EDIT_SWAP_WINDOWS: u8 = 1;
pub const OMNI_NIRI_MUTATION_EDIT_MOVE_WINDOW_TO_COLUMN_INDEX: u8 = 2;
pub const OMNI_NIRI_MUTATION_EDIT_SWAP_COLUMN_WIDTH_STATE: u8 = 3;
pub const OMNI_NIRI_MUTATION_EDIT_SWAP_WINDOW_SIZE_HEIGHT: u8 = 4;
pub const OMNI_NIRI_MUTATION_EDIT_RESET_WINDOW_SIZE_HEIGHT: u8 = 5;
pub const OMNI_NIRI_MUTATION_EDIT_REMOVE_COLUMN_IF_EMPTY: u8 = 6;
pub const OMNI_NIRI_MUTATION_EDIT_REFRESH_TABBED_VISIBILITY: u8 = 7;
pub const OMNI_NIRI_MUTATION_EDIT_DELEGATE_MOVE_COLUMN: u8 = 8;
pub const OMNI_NIRI_MUTATION_EDIT_CREATE_COLUMN_ADJACENT_AND_MOVE_WINDOW: u8 = 9;
pub const OMNI_NIRI_MUTATION_EDIT_INSERT_NEW_COLUMN_AT_INDEX_AND_MOVE_WINDOW: u8 = 10;
pub const OMNI_NIRI_MUTATION_EDIT_SWAP_COLUMNS: u8 = 11;
pub const OMNI_NIRI_MUTATION_EDIT_NORMALIZE_COLUMNS_BY_FACTOR: u8 = 12;
pub const OMNI_NIRI_MUTATION_EDIT_NORMALIZE_COLUMN_WINDOWS_BY_FACTOR: u8 = 13;
pub const OMNI_NIRI_MUTATION_EDIT_BALANCE_COLUMNS: u8 = 14;
pub const OMNI_NIRI_MUTATION_EDIT_INSERT_INCOMING_WINDOW_INTO_COLUMN: u8 = 15;
pub const OMNI_NIRI_MUTATION_EDIT_INSERT_INCOMING_WINDOW_IN_NEW_COLUMN: u8 = 16;
pub const OMNI_NIRI_MUTATION_EDIT_REMOVE_WINDOW_BY_INDEX: u8 = 17;
pub const OMNI_NIRI_MUTATION_EDIT_RESET_ALL_COLUMN_CACHED_WIDTHS: u8 = 18;

pub const OMNI_NIRI_MUTATION_MAX_EDITS: usize = 32;
pub const OMNI_NIRI_RUNTIME_HINT_MAX_COLUMNS: usize = 2;

pub const OMNI_NIRI_WORKSPACE_OP_MOVE_WINDOW_TO_WORKSPACE: u8 = 0;
pub const OMNI_NIRI_WORKSPACE_OP_MOVE_COLUMN_TO_WORKSPACE: u8 = 1;

pub const OMNI_NIRI_WORKSPACE_EDIT_SET_SOURCE_SELECTION_WINDOW: u8 = 0;
pub const OMNI_NIRI_WORKSPACE_EDIT_SET_SOURCE_SELECTION_NONE: u8 = 1;
pub const OMNI_NIRI_WORKSPACE_EDIT_REUSE_TARGET_EMPTY_COLUMN: u8 = 2;
pub const OMNI_NIRI_WORKSPACE_EDIT_CREATE_TARGET_COLUMN_APPEND: u8 = 3;
pub const OMNI_NIRI_WORKSPACE_EDIT_PRUNE_TARGET_EMPTY_COLUMNS_IF_NO_WINDOWS: u8 = 4;
pub const OMNI_NIRI_WORKSPACE_EDIT_REMOVE_SOURCE_COLUMN_IF_EMPTY: u8 = 5;
pub const OMNI_NIRI_WORKSPACE_EDIT_ENSURE_SOURCE_PLACEHOLDER_IF_NO_COLUMNS: u8 = 6;
pub const OMNI_NIRI_WORKSPACE_EDIT_SET_TARGET_SELECTION_MOVED_WINDOW: u8 = 7;
pub const OMNI_NIRI_WORKSPACE_EDIT_SET_TARGET_SELECTION_MOVED_COLUMN_FIRST_WINDOW: u8 = 8;

pub const OMNI_NIRI_WORKSPACE_MAX_EDITS: usize = 16;

pub const OMNI_DWINDLE_MAX_NODES: usize = (MAX_WINDOWS * 2) - 1;

pub const OMNI_DWINDLE_NODE_SPLIT: u8 = 0;
pub const OMNI_DWINDLE_NODE_LEAF: u8 = 1;

pub const OMNI_DWINDLE_ORIENTATION_HORIZONTAL: u8 = 0;
pub const OMNI_DWINDLE_ORIENTATION_VERTICAL: u8 = 1;

pub const OMNI_DWINDLE_DIRECTION_LEFT: u8 = 0;
pub const OMNI_DWINDLE_DIRECTION_RIGHT: u8 = 1;
pub const OMNI_DWINDLE_DIRECTION_UP: u8 = 2;
pub const OMNI_DWINDLE_DIRECTION_DOWN: u8 = 3;

pub const OMNI_DWINDLE_OP_ADD_WINDOW: u8 = 0;
pub const OMNI_DWINDLE_OP_REMOVE_WINDOW: u8 = 1;
pub const OMNI_DWINDLE_OP_SYNC_WINDOWS: u8 = 2;
pub const OMNI_DWINDLE_OP_MOVE_FOCUS: u8 = 3;
pub const OMNI_DWINDLE_OP_SWAP_WINDOWS: u8 = 4;
pub const OMNI_DWINDLE_OP_TOGGLE_FULLSCREEN: u8 = 5;
pub const OMNI_DWINDLE_OP_TOGGLE_ORIENTATION: u8 = 6;
pub const OMNI_DWINDLE_OP_RESIZE_SELECTED: u8 = 7;
pub const OMNI_DWINDLE_OP_BALANCE_SIZES: u8 = 8;
pub const OMNI_DWINDLE_OP_CYCLE_SPLIT_RATIO: u8 = 9;
pub const OMNI_DWINDLE_OP_MOVE_SELECTION_TO_ROOT: u8 = 10;
pub const OMNI_DWINDLE_OP_SWAP_SPLIT: u8 = 11;
pub const OMNI_DWINDLE_OP_SET_PRESELECTION: u8 = 12;
pub const OMNI_DWINDLE_OP_CLEAR_PRESELECTION: u8 = 13;
pub const OMNI_DWINDLE_OP_VALIDATE_SELECTION: u8 = 14;
